--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                     <div class="about__numbers">
                         <div class="number__info">
                             <p class="number">+8</p>
-                            <p class="info">Anos de Experiência</p>
+                            <p class="info">Anos de<br>Experiência</p>
                         </div>
                         <div class="number__info">
                             <p class="number">+400</p>
-                            <p class="info">Clientes satisfeitos</p>
+                            <p class="info">Clientes<br>satisfeitos</p>
                         </div>
                     </div>
                 </div> 
@@ -171,12 +171,73 @@
         </div>
     </section>
 
+    <section class="page__services" id="servicos">
+        <div class="wrapper">
+            <h2 class="title">
+                <img src="assets/img/title-line.svg" class="title__line" alt="Título">
+                Serviços
+            </h2>
+            <h3 class="subtitle">Soluções Profissionais para manter sua empresa funcionando sem interrupções</h3>
+
+            <div class="cards--desktop">
+                <div class="card__service">
+                    <img src="assets/img/service-1.svg" class="icon__service" alt="Ícone de Computador">
+                    <h2 class="card__title">Montagem e Manutenção</h2>
+                    <p class="card__text">Montagem e manutenção de computadores e notebooks com medidas preventivas. Realizamos coleta e entrega para sua conveniência.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-2.svg" class="icon__service" alt="Ícone de Atendente">
+                    <h2 class="card__title">Suporte e Helpdesk</h2>
+                    <p class="card__text">Serviço especializado de apoio à operação técnica do cliente para que a TI seja uma aliada no seu crescimento e de sua empresa.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-3.svg" class="icon__service" alt="Ícone de CPU">
+                    <h2 class="card__title">Instalação e Configuração de Servidores</h2>
+                    <p class="card__text">Configuração de servidores, instalação e implantação dos servidores em plataforma Windows.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-4.svg" class="icon__service" alt="Ícone de Reunião de Pessoas">
+                    <h2 class="card__title">Consultoria da Área de TI</h2>
+                    <p class="card__text">Identificamos suas necessidades, elaboramos um programa de trabalho personalizado e construímos uma solução em conjunto com a empresa.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-5.svg" class="icon__service" alt="Ícone de Escudo com Cadeado">
+                    <h2 class="card__title">Segurança de Redes</h2>
+                    <p class="card__text">Proteção das informações de seus clientes, filtragem dos pacotes de internet e controle da utilização dos funcionários.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-6.svg" class="icon__service" alt="Ícone de Nuvem">
+                    <h2 class="card__title">Backup em Nuvem</h2>
+                    <p class="card__text">Cópias de segurança para seus arquivos e Informações através de backups diários de forma rápida e segura. Solução simples, rápida e automática.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-7.svg" class="icon__service" alt="Ícone de Engrenagem">
+                    <h2 class="card__title">Sistemas e Automação</h2>
+                    <p class="card__text">Implementação de sistemas e automação empresarial, visando otimizar processos internos e aumentar a eficiência operacional.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-8.svg" class="icon__service" alt="Ícone de Website">
+                    <h2 class="card__title">Criação de Sites</h2>
+                    <p class="card__text">Desenvolvimentos de landings pages e sites institucionais responsivos, para garantir a presença online profissional e atrativa da sua empresa.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="page__footer" id="contato">
         <div class="footer__content">
             <div class="wrapper">
                 <div class="footer__links">
-                    <a href="https://hitechhouse.com.br/" class="logo__footer">
-                        <img src="assets/img/logo__footer.png" class="logo" alt="Logo Hitech House">
+                    <a href="index.html" class="logo__footer">
+                        <img src="assets/img/logo-footer.png" class="logo" alt="Logo C">
                     </a>
                     <div class="links__social">
                         <a href="#" target="_blank" class="social">
@@ -186,7 +247,7 @@
                             <img src="assets/img/icon-face.svg" alt="Facebook" target="_blank">
                         </a>
                         <a href="#" target="_blank" class="social">
-                            <img src="assets/img/icon-youtube.svg" alt="Youtube" target="_blank">
+                            <img src="assets/img/icon-whats.svg" alt="Whatsapp" target="_blank">
                         </a>
                     </div>
                 </div>
