--- a/index.html
+++ b/index.html
@@ -165,8 +165,10 @@
                     </div>
                 </div> 
 
-                <img src="assets/img/cover-about.png" class="cover" alt="Imagem ESC Informática">
-                <img src="assets/img/cover-detail.png" class="cover__detail" alt="Logo ESC">
+                <div class="cover__about">
+                    <img src="assets/img/cover-about.png" class="cover" alt="Imagem ESC Informática">
+                    <img src="assets/img/cover-detail.png" class="cover__detail" alt="Logo ESC">
+                </div>
             </div>
         </div>
     </section>
@@ -227,6 +229,121 @@
                     <h2 class="card__title">Criação de Sites</h2>
                     <p class="card__text">Desenvolvimentos de landings pages e sites institucionais responsivos, para garantir a presença online profissional e atrativa da sua empresa.</p>
                     <span class="card__btn">Mais informações</span>
+                </div>
+                <div class="card__service">
+                    <img src="assets/img/service-9.svg" class="icon__service" alt="Ícone de Website">
+                    <h2 class="card__title">Hospedagem</h2>
+                    <p class="card__text">Hospedagem confiável e segura para seus sites e e-mails. Nossa infraestrutura garante alto desempenho, estabilidade e proteção dos seus dados.</p>
+                    <span class="card__btn">Mais informações</span>
+                </div>
+            </div>
+
+            <div class="cards--mobile">
+                <div class="owl-carousel owl-theme services__carousel">
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-1.svg" class="icon__service" alt="Ícone de Computador">
+                            <h2 class="card__title">Montagem e Manutenção</h2>
+                            <p class="card__text">Montagem e manutenção de computadores e notebooks com medidas preventivas. Realizamos coleta e entrega para sua conveniência.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-2.svg" class="icon__service" alt="Ícone de Atendente">
+                            <h2 class="card__title">Suporte e Helpdesk</h2>
+                            <p class="card__text">Serviço especializado de apoio à operação técnica do cliente para que a TI seja uma aliada no seu crescimento e de sua empresa.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-3.svg" class="icon__service" alt="Ícone de CPU">
+                            <h2 class="card__title">Instalação e Configuração de Servidores</h2>
+                            <p class="card__text">Configuração de servidores, instalação e implantação dos servidores em plataforma Windows.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-4.svg" class="icon__service" alt="Ícone de Reunião de Pessoas">
+                            <h2 class="card__title">Consultoria da Área de TI</h2>
+                            <p class="card__text">Identificamos suas necessidades, elaboramos um programa de trabalho personalizado e construímos uma solução em conjunto com a empresa.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-5.svg" class="icon__service" alt="Ícone de Escudo com Cadeado">
+                            <h2 class="card__title">Segurança de Redes</h2>
+                            <p class="card__text">Proteção das informações de seus clientes, filtragem dos pacotes de internet e controle da utilização dos funcionários.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-6.svg" class="icon__service" alt="Ícone de Nuvem">
+                            <h2 class="card__title">Backup em Nuvem</h2>
+                            <p class="card__text">Cópias de segurança para seus arquivos e Informações através de backups diários de forma rápida e segura. Solução simples, rápida e automática.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-7.svg" class="icon__service" alt="Ícone de Engrenagem">
+                            <h2 class="card__title">Sistemas e Automação</h2>
+                            <p class="card__text">Implementação de sistemas e automação empresarial, visando otimizar processos internos e aumentar a eficiência operacional.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-8.svg" class="icon__service" alt="Ícone de Website">
+                            <h2 class="card__title">Criação de Sites</h2>
+                            <p class="card__text">Desenvolvimentos de landings pages e sites institucionais responsivos, para garantir a presença online profissional e atrativa da sua empresa.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card__service">
+                            <img src="assets/img/service-9.svg" class="icon__service" alt="Ícone de Website">
+                            <h2 class="card__title">Hospedagem</h2>
+                            <p class="card__text">Hospedagem confiável e segura para seus sites e e-mails. Nossa infraestrutura garante alto desempenho, estabilidade e proteção dos seus dados.</p>
+                            <span class="card__btn">Mais informações</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="page__testimonials" id="depoimentos">
+        <div class="bg__testimonials"></div>
+        <div class="wrapper">
+            <div class="heading">
+                <h2 class="title">
+                    <img src="assets/img/title-line.svg" class="title__line" alt="Título">
+                    Depoimentos
+                </h2>
+                <p class="subtitle">O que dizem sobre nós</p>
+            </div>
+
+            <div class="owl-carousel owl-theme testimonials__carousel">
+
+                <div class="item">
+                    <div class="card__testimonial mx-auto">
+                        <img src="assets/img/icon-quotes.svg" class="icon__quotes" alt="Aspas">
+                        <p class="testimonial">Estou extremamente satisfeita com o serviço de manutenção oferecido por esta empresa. Eles montaram meu computador exatamente como eu precisava para minhas atividades. A manutenção preventiva é impecável, sempre deixando meu equipamento como novo. Recomendo fortemente!</p>
+                        <p class="name">Maria da Silva, Empresária</p>
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="card__testimonial mx-auto">
+                        <img src="assets/img/icon-quotes.svg" class="icon__quotes" alt="Aspas">
+                        <p class="testimonial">Estou extremamente satisfeita com o serviço de manutenção oferecido por esta empresa. Eles montaram meu computador exatamente como eu precisava para minhas atividades. A manutenção preventiva é impecável, sempre deixando meu equipamento como novo. Recomendo fortemente!</p>
+                        <p class="name">Maria da Silva, Empresária</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -309,32 +426,36 @@
     <script src="assets/libs/owl.carousel.min.js"></script>
     <script> 
 
-        $('.about__carousel').owlCarousel({
-            loop: false,
-            nav: true,
-            dots: true,  
-            navText: ["<img src='assets/img/chevron-left.svg'>", "<img src='assets/img/chevron-right.svg'>"],         
+        $('.services__carousel').owlCarousel({
+            loop: true,
+            nav: false,
+            dots: true,
+            stagePadding: 30,                      
                         
             responsive:{
                 0: {
                     items: 1,
-                    margin: 10,                    
+                    margin: 15,                    
                 }
             }
         });        
 
-        $('.unities__carousel').owlCarousel({
-            loop: true,
-            nav: false,
-            dots: true, 
-            stagePadding: 45,
-            dotsEach: 3,          
+        $('.testimonials__carousel').owlCarousel({
+            loop: false,
+            nav: true,
+            dots: true,
+            navText: ["<img src='assets/img/chevron-left.svg'>", "<img src='assets/img/chevron-right.svg'>"],          
                         
             responsive:{
                 0: {
                     items: 1,
-                    margin: 10,                    
+                    margin: 15,                    
                 },
+
+                768: {
+                    items: 2,
+                    margin: 10,
+                }
             }
         });
     </script>
