--- a/index.html
+++ b/index.html
@@ -349,71 +349,145 @@
         </div>
     </section>
 
+    <section class="page__customers" id="clientes">
+        <div class="wrapper">
+            <h2 class="title">
+                <img src="assets/img/title-line.svg" class="title__line" alt="Título">
+                Nossos Clientes
+            </h2>
+            <h3 class="subtitle">Conheça alguns clientes que confiaram em nosso trabalho</h3>
+
+            <div class="owl-carousel owl-theme customers__carousel">
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-1.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-2.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-3.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-4.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-5.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-6.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-7.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-8.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-9.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="card__customer mx-auto">
+                        <img src="assets/img/customer-10.png" class="customer__cover" alt="Logo do cliente">
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
+    <section class="page__cta" id="contato">
+        <div class="wrapper">
+            <h2 class="cta__title">Transforme seu negócio com nossas soluções em TI</h2>
+            <a href="#" class="btn__blue btn__cta">
+                <img src="assets/img/icon-whats.svg" class="icon__whats" alt="Whatsapp">
+                Entre em contato
+            </a>
+        </div>
+    </section>
+
     <footer class="page__footer" id="contato">
         <div class="footer__content">
             <div class="wrapper">
                 <div class="footer__links">
-                    <a href="index.html" class="logo__footer">
-                        <img src="assets/img/logo-footer.png" class="logo" alt="Logo C">
+                    <a href="index.html" class="link__logo">
+                        <img src="assets/img/logo-footer.png" class="logo__footer" alt="Logo ESC Informática">
                     </a>
                     <div class="links__social">
-                        <a href="#" target="_blank" class="social">
-                            <img src="assets/img/icon-insta.svg" alt="Instagram" target="_blank">
+                        <a href="https://www.instagram.com/escinformaticago/" class="link" target="_blank">
+                            <img src="assets/img/icon-insta.svg" alt="Instagram">
                         </a>
-                        <a href="#" target="_blank" class="social">
-                            <img src="assets/img/icon-face.svg" alt="Facebook" target="_blank">
-                        </a>
-                        <a href="#" target="_blank" class="social">
-                            <img src="assets/img/icon-whats.svg" alt="Whatsapp" target="_blank">
+                        <a href="https://www.facebook.com/escinformaticago" class="link" target="_blank">
+                            <img src="assets/img/icon-face.svg" alt="Facebook">
+                        </a>                        
+                        <a href="#" class="link" target="_blank">
+                            <img src="assets/img/icon-whats.svg" alt="Whatsapp">
                         </a>
                     </div>
                 </div>
-
-                <div class="footer__nav">
-                    <h2 class="nav__title">Navegue</h2>
+                <nav class="footer__nav">
                     <a href="#inicio" class="link__nav">
                         Início
-                    </a>                        
+                    </a>
                     <a href="#sobre" class="link__nav">
                         Sobre
                     </a>
-                    <a href="#franquias" class="link__nav">
-                        Seja um franqueado
+                    <a href="#servicos" class="link__nav">
+                        Serviços
                     </a>
-                    <a href="#unidades" class="link__nav">
-                        Unidades
+                    <a href="#depoimentos" class="link__nav">
+                        Depoimentos
                     </a>
-                </div>
-
-                <div class="footer__contact">
-                    <h2 class="contact__title">Contato</h2>
-                    <a href="5519982867350" class="link__contact" target="_blank">
-                        <img src="assets/img/icon-phone.svg" class="icon__contact" alt="Ícone de telefone">
-                        (19) 98286-7350
+                    <a href="#clientes" class="link__nav">
+                        Clientes
                     </a>
-                    <a href="mailto:contato@hitechhouse.com.br" class="link__contact" target="_blank">
-                        <img src="assets/img/icon-email.svg" class="icon__contact" alt="Ícone de envelope">
-                        contato@hitechhouse.com.br
+                    <a href="#contato" class="link__nav">
+                        Contato
                     </a>
-                    <a href="https://maps.app.goo.gl/EEmfK1qK9rS1GsYF9" class="link__contact" target="_blank">
+                </nav>
+                <div class="footer__contacts">
+                    <div class="link__contact">
+                        <img src="assets/img/icon-phone.svg" class="icon__contact" alt="Ícone de Telefone">
+                        <a href="tel:5562982702109" class="contact" target="_blank">(62) 98270-2109</a>
+                    </div>
+                    <div class="link__contact">
+                        <img src="assets/img/icon-mail.svg" class="icon__contact" alt="Ícone de Envelope">                        
+                        <a href="mailto:contato@escinformaticago.com.br" class="contact" target="_blank">contato@escinformaticago.com.br</a>
+                    </div>
+                    <div class="link__contact">
                         <img src="assets/img/icon-location.svg" class="icon__contact" alt="Ícone de Localização">
-                        Rua 7 de Setembro, 785<br>
-                        Centro, Indaiatuba - SP
-                    </a>                    
+                        <a href="https://maps.app.goo.gl/28V8kgAiKAyEY9kg6" class="contact" target="_blank">
+                            Av. Vicente Rodrigues<br>
+                            Goiânia, GO,<br>
+                            74390-371
+                        </a>
+                    </div>
+                    <p class="contact__info">Horário de atendimento:<br>Seg a Sex das 08:00 às 18:00</p>
                 </div>
-                <p class="contact__info">
-                    <img src="assets/img/icon-clock.svg" class="icon__contact" alt="Ícone de Relógio">
-                    Seg a Sex: 8h as 18h<br>
-                    Sáb: 8h as 13h
-                </p>
             </div>
         </div>
         <div class="footer__copyrights">
             <div class="wrapper">
-                <p class="copyright">Hitech House Brasil © Todos os direitos reservados</p>
-                <a href="https://www.instagram.com/escinformaticago/" class="logo__esc" target="_blank">
-                    <img src="assets/img/logo-esc.png" class="logo" alt="Logo ESC Informática">
-                </a>
+                <p class="copyrights">
+                    ESC Informática® Computer Solutions 2024. Todos os direitos reservados.
+                </p>
             </div>
         </div>
     </footer>
@@ -452,8 +526,29 @@
                     margin: 15,                    
                 },
 
-                768: {
+                900: {
                     items: 2,
+                    margin: 10,
+                }
+            }
+        });
+
+        $('.customers__carousel').owlCarousel({
+            loop: true,
+            nav: true,
+            dots: true,
+            navText: ["<img src='assets/img/chevron-left-black.svg'>", "<img src='assets/img/chevron-right-black.svg'>"],  
+            dotsEach: 3,        
+                        
+            responsive:{
+                0: {
+                    items: 1,
+                    margin: 10, 
+                    stagePadding: 50,                   
+                },
+
+                900: {
+                    items: 4,
                     margin: 10,
                 }
             }
