--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <span>Suporte e Helpdesk</span> de confiança para seu negócio
             </h2>
             <p class="description">Técnicos experientes prontos para resolver qualquer problema e manter <span>sua operação em plena capacidade.</span></p>
-            <a href="#services" class="btn__blue btn__banner">Saiba mais</a>
+            <a href="#servicos" class="btn__blue btn__banner">Saiba mais</a>
             <div class="btn__down">
                 <a href="#sobre" class="down">
                     <img src="assets/img/chevron-down.svg" class="chevron__down" alt="Seta para baixo">
@@ -887,6 +887,10 @@
             </div>
         </div>
     </footer>
+
+    <a href="https://wa.me/5562982702109" class="float__whatsapp" target="_blank">
+        <img src="assets/img/icon-whats.svg" alt="whatsapp">
+    </a>
 
     <!-- bootstrap 4.6.1 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
