--- a/index.html
+++ b/index.html
@@ -185,6 +185,47 @@
         </div>
     </div>
 
+    <section class="page__about" id="sobre">
+        <div class="wrapper">
+            <div class="content">
+                <div class="heading">
+                    <img src="assets/img/title.svg" class="title__detail">
+                    <h2 class="title">Sobre</h2>
+                    <h3 class="subtitle">O que é Laje Fácil?</h3>
+                </div>
+                <p class="text__highlight">
+                    Faça você mesmo.<br>
+                    <span>Para qualquer tamanho de obra.</span>
+                </p>
+                <p class="text">A Laje Fácil renova o conceito de fabricação de laje pré-fabricada. Permite a execução de lajes treliçadas pré-fabricadas na própria obra, qualquer que seja o porte. Com esta possibilidade, <span>o tempo de execução da obra é menor, e o custo inferior</span> às opções oferecidas nos mercados de lajes pré-fabricadas, além de se conseguir diversas outras vantagens sobre os demais processos construtivos.<br>
+                    Com a Laje Fácil, <span>o controle do processo de fabricação da laje é total</span>, obtendo-se os mesmos resultados estruturais que os
+                    fabricantes de lajes alcançam em suas fábricas.
+                </p>
+            </div>
+            
+            <img src="assets/img/cover-about.png" class="cover" alt="">            
+        </div>
+
+        <div class="wrapper__features">
+            <div class="card__feature card-1">
+                <h2 class="card__title">
+                    <img src="assets/img/icon-check-orange.svg" class="icon" alt="">
+                    Desenvolvido em Poliestireno Expandido
+                </h2>
+                <p class="text">Material de baixa densidade e excelente isolante térmico. Sua forma possibilita a execução das vigas treliçadas sem a necessidade das tradicionais formas metálicas, ocupando pouco espaço no canteiro.</p>
+            </div>
+            <div class="card__feature card-2">
+                <h2 class="card__title">
+                    <img src="assets/img/icon-check-black.svg" class="icon" alt="">
+                    Facilidade e Qualidade do EPS
+                </h2>
+                <p class="text">As características do EPS facilitam as instalações elétricas e hidráulicas, as tubulações são posicionadas internamente, não comprometendo a mesa de compressão da laje.</p>
+            </div>
+        </div>
+    </section>
+
+    
+
     <footer class="page__footer" id="contato">
         <div class="footer__content">
             <div class="wrapper">
