--- a/index.html
+++ b/index.html
@@ -224,7 +224,135 @@
         </div>
     </section>
 
-    
+    <section class="page__cta-1">
+        <div class="wrapper">
+            <h2 class="title">
+                Obra mais rápida e econômica
+            </h2>
+            <a href="" class="button">
+                <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                Entre em contato
+            </a>
+        </div>
+    </section>
+
+    <section class="page__benefits" id="beneficios">
+        <div class="wrapper">
+            <div class="heading">
+                <img src="assets/img/title-center.svg" class="title__detail" alt="">
+                <h2 class="title">Benefícios</h2>
+                <h3 class="subtitle">Conheça todas as vantagens do Laje Fácil</h3>
+            </div>
+
+            <div class="cards__benefits--desktop">
+                <div class="card">
+                    <img src="assets/img/icon-benefits-1.svg" class="icon" alt="">
+                    <h2 class="card__title">Economia</h2>
+                    <p class="text">Redução de custos em todo processo de execução
+                        da laje treliçada.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-2.svg" class="icon" alt="">
+                    <h2 class="card__title">Qualidade</h2>
+                    <p class="text">Controle da qualidade dos materiais e confiabilidade em sua estrutura desde a execução das lajes.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-3.svg" class="icon" alt="">
+                    <h2 class="card__title">Agilidade</h2>
+                    <p class="text">Permite fazer o cronograma da fabricação da laje.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-4.svg" class="icon" alt="">
+                    <h2 class="card__title">Inovação</h2>
+                    <p class="text">As peças de EPS são um excelente isolante térmico, leve e de fácil transporte.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-5.svg" class="icon" alt="">
+                    <h2 class="card__title">Produtividade</h2>
+                    <p class="text">Redução das etapas de fabricação e transporte, menor prazo de execução e montagem e economia de mão-de-obra.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-6.svg" class="icon" alt="">
+                    <h2 class="card__title">Facilidade</h2>
+                    <p class="text">O empilhamento viabiliza a pré-concretagem das vigas no canteiro de obra, ocupando pouco espaço.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-7.svg" class="icon" alt="">
+                    <h2 class="card__title">Versatilidade</h2>
+                    <p class="text">Permite concepção estrutural para lajes nervuradas unidirecionais ou bidirecionais.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/img/icon-benefits-8.svg" class="icon" alt="">
+                    <h2 class="card__title">Confiabilidade</h2>
+                    <p class="text">O cimbramento da Laje Fácil segue as mesmas considerações que as lajes
+                        treliçadas tradicionais.</p>
+                </div>
+            </div>
+
+            <div class="cards__benefits--mobile">
+                <div class="owl-carousel owl-theme cards__carousel">
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-1.svg" class="icon" alt="">
+                            <h2 class="card__title">Economia</h2>
+                            <p class="text">Redução de custos em todo processo de execução
+                                da laje treliçada.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-2.svg" class="icon" alt="">
+                            <h2 class="card__title">Qualidade</h2>
+                            <p class="text">Controle da qualidade dos materiais e confiabilidade em sua estrutura desde a execução das lajes.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-3.svg" class="icon" alt="">
+                            <h2 class="card__title">Agilidade</h2>
+                            <p class="text">Permite fazer o cronograma da fabricação da laje.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-4.svg" class="icon" alt="">
+                            <h2 class="card__title">Inovação</h2>
+                            <p class="text">As peças de EPS são um excelente isolante térmico, leve e de fácil transporte.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-5.svg" class="icon" alt="">
+                            <h2 class="card__title">Produtividade</h2>
+                            <p class="text">Redução das etapas de fabricação e transporte, menor prazo de execução e montagem e economia de mão-de-obra.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-6.svg" class="icon" alt="">
+                            <h2 class="card__title">Facilidade</h2>
+                            <p class="text">O empilhamento viabiliza a pré-concretagem das vigas no canteiro de obra, ocupando pouco espaço.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-7.svg" class="icon" alt="">
+                            <h2 class="card__title">Versatilidade</h2>
+                            <p class="text">Permite concepção estrutural para lajes nervuradas unidirecionais ou bidirecionais.</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="card">
+                            <img src="assets/img/icon-benefits-8.svg" class="icon" alt="">
+                            <h2 class="card__title">Confiabilidade</h2>
+                            <p class="text">O cimbramento da Laje Fácil segue as mesmas considerações que as lajes
+                                treliçadas tradicionais.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer class="page__footer" id="contato">
         <div class="footer__content">
@@ -298,7 +426,7 @@
     <script src="assets/libs/owl.carousel.min.js"></script>
     <script> 
 
-        $('.services__carousel').owlCarousel({
+        $('.cards__carousel').owlCarousel({
             loop: true,
             nav: false,
             dots: true,
