--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <h3 class="subtitle">Conheça todas as vantagens do Laje Fácil</h3>
             </div>
 
-            <div class="cards__benefits--desktop">
+            <div class="cards__benefits">
                 <div class="card">
                     <img src="assets/img/icon-benefits-1.svg" class="icon" alt="">
                     <h2 class="card__title">Economia</h2>
@@ -288,67 +288,51 @@
                         treliçadas tradicionais.</p>
                 </div>
             </div>
+        </div>
+    </section>
 
-            <div class="cards__benefits--mobile">
-                <div class="owl-carousel owl-theme cards__carousel">
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-1.svg" class="icon" alt="">
-                            <h2 class="card__title">Economia</h2>
-                            <p class="text">Redução de custos em todo processo de execução
-                                da laje treliçada.</p>
-                        </div>
+    <section class="page__company" id="empresa">
+        <div class="wrapper">
+            <div class="content">
+                <div class="heading">
+                    <img src="assets/img/title.svg" class="title__detail" alt="">
+                    <h2 class="title">A Laje Fácil</h2>
+                    <h3 class="subtitle">Experiência e qualificação na construção civil</h3>
+                </div>
+                <p class="text">
+                    Somos uma empresa especializada em soluções para fabricação de laje pré-moldada para diversos segmentos, como construção civil, indústria, agronegócio e outros. A Laje Fácil oferece <span>produtos de qualidade, com garantia e entrega rápida.</span>
+                </p>
+                <div class="features">
+                    <div class="tag__feature">
+                        <img src="assets/img/icon-laje-1.svg" class="icon" alt="">
+                        <span>Qualidade garantida</span>
                     </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-2.svg" class="icon" alt="">
-                            <h2 class="card__title">Qualidade</h2>
-                            <p class="text">Controle da qualidade dos materiais e confiabilidade em sua estrutura desde a execução das lajes.</p>
-                        </div>
+                    <div class="tag__feature">
+                        <img src="assets/img/icon-laje-2.svg" class="icon" alt="">
+                        <span>Agilidade e confiança</span>
                     </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-3.svg" class="icon" alt="">
-                            <h2 class="card__title">Agilidade</h2>
-                            <p class="text">Permite fazer o cronograma da fabricação da laje.</p>
-                        </div>
+                    <div class="tag__feature">
+                        <img src="assets/img/icon-laje-3.svg" class="icon" alt="">
+                        <span>Preços competitivos</span>
                     </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-4.svg" class="icon" alt="">
-                            <h2 class="card__title">Inovação</h2>
-                            <p class="text">As peças de EPS são um excelente isolante térmico, leve e de fácil transporte.</p>
-                        </div>
+                    <div class="tag__feature">
+                        <img src="assets/img/icon-laje-4.svg" class="icon" alt="">
+                        <span>Equipe qualificada</span>
                     </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-5.svg" class="icon" alt="">
-                            <h2 class="card__title">Produtividade</h2>
-                            <p class="text">Redução das etapas de fabricação e transporte, menor prazo de execução e montagem e economia de mão-de-obra.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-6.svg" class="icon" alt="">
-                            <h2 class="card__title">Facilidade</h2>
-                            <p class="text">O empilhamento viabiliza a pré-concretagem das vigas no canteiro de obra, ocupando pouco espaço.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-7.svg" class="icon" alt="">
-                            <h2 class="card__title">Versatilidade</h2>
-                            <p class="text">Permite concepção estrutural para lajes nervuradas unidirecionais ou bidirecionais.</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <div class="card">
-                            <img src="assets/img/icon-benefits-8.svg" class="icon" alt="">
-                            <h2 class="card__title">Confiabilidade</h2>
-                            <p class="text">O cimbramento da Laje Fácil segue as mesmas considerações que as lajes
-                                treliçadas tradicionais.</p>
-                        </div>
-                    </div>
+                </div>
+            </div>
+
+            <div class="cover__cta">
+                <img src="assets/img/cover-laje.png" class="cover" alt="Laje">
+
+                <div class="card__cta">
+                    <p class="text">
+                        Estamos prontos para transformar o seu projeto em realidade!
+                    </p>
+                    <a href="" class="button">
+                        <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                        Entre em contato
+                    </a>
                 </div>
             </div>
         </div>
