--- a/index.html
+++ b/index.html
@@ -338,6 +338,57 @@
         </div>
     </section>
 
+    <section class="page__cta-2">
+        <div class="wrapper">
+            <img src="assets/img/title-center-orange.svg" class="title__detail" alt="">
+            <h2 class="title"> Com a <span>Laje Fácil</span> você garante mais economia, menos desperdício e uma obra mais eficiente!</h2>
+            <p class="description">Fale com a gente agora mesmo e solicite o orçamento da Laje Fácil para a sua obra!</p>
+            <a href="" class="button">
+                <img src="assets/img/icon-whats.svg" class="icon" alt="Whatsapp">
+                Fale conosco
+            </a>
+        </div>
+    </section>
+
+    <section class="page__projects" id="obras">
+        <div class="wrapper">
+            <div class="heading">
+                <img src="assets/img/title.svg" class="title__detail" alt="">
+                <h2 class="title">Obras</h2>
+                <h3 class="subtitle">Projetos realizados</h3>
+            </div>
+            <a href="#" class="button">
+                <img src="assets/img/icon-insta-orange.svg" class="icon" alt="Instagram">
+                Veja mais
+            </a>
+
+            <div class="links">
+                <a href="https://www.instagram.com/p/DCE0hswxd_D/" class="card__video">
+                    <img src="assets/img/video-1.png" class="cover" alt="Vídeo">
+                    <div class="caption">
+                        <h2 class="title">Confirmar</h2>
+                        <img src="assets/img/icon-play.svg" class="icon" alt="Assistir">
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/p/DDPcp11uhpe/" class="card__video">
+                    <img src="assets/img/video-2.png" class="cover" alt="Vídeo">
+                    <div class="caption">
+                        <h2 class="title">Bragança Paulista - SP</h2>
+                        <img src="assets/img/icon-play.svg" class="icon" alt="Assistir">
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/p/DDw7W0LONte/" class="card__video">
+                    <img src="assets/img/video-3.png" class="cover" alt="Vídeo">
+                    <div class="caption">
+                        <h2 class="title">Serra da Catareira - SP</h2>
+                        <img src="assets/img/icon-play.svg" class="icon" alt="Assistir">
+                    </div>
+                </a>
+            </div>
+        </div>
+        
+    </section>
+
     <footer class="page__footer" id="contato">
         <div class="footer__content">
             <div class="wrapper">
